--- a/styles/scss/_index.scss
+++ b/styles/scss/_index.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url("layout_w2/images/banner.png");
+  background-image: url("images/banner.png");
   height: 958px;
   background-size: cover;
   background-position: center;
