--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -80,6 +80,9 @@ body {
 .mr-4 {
   margin-right: 16px;
 }
+// .mr-6 {
+//   margin-right: 24px;
+// }
 .pt-14 {
   padding-top: 56px;
 }
@@ -101,19 +104,5 @@ body {
 .container {
   width: 1200px;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.img-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-.img-flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
