--- a/styles/css/all.css
+++ b/styles/css/all.css
@@ -133,6 +133,7 @@ table {
 img {
   max-width: 100%;
   height: auto;
+  vertical-align: middle;
 }
 
 a {
@@ -285,23 +286,7 @@ body {
 .container {
   width: 1200px;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.img-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.img-flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .header {
@@ -327,9 +312,6 @@ body {
 }
 
 .about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   text-align: center;
 }
 
@@ -352,6 +334,23 @@ body {
   background: #891818;
   margin-right: 16px;
   padding-top: 4px;
+}
+
+.about .divider {
+  width: 384px;
+  border-top: 1px solid #000;
+  margin: 24px auto;
+}
+
+.brand-imgs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.works-imgs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
 }
 
 .contact-link:hover {
